Reduce memory footprint and parallelise stream handling